--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,9 @@ figure {
   padding-left: 8px;
 }
 .button-style {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pushbutton button:hover,
 .pushbutton button:focus {
@@ -598,50 +600,67 @@ figure {
   padding-top: 50px;
 }
 
-.portfolio-image {
+.portfolio-list-item {
+  position: relative;
+  display: inline-block;
   margin-bottom: 30px;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
 }
-.portfolio-image-overlay {
-  position: relative;
-  width: 370px;
-  height: 294px;
-}
-.portfolio-image-style-link {
+.akapit-overlay {
   position: absolute;
-  display: block;
   top: 0;
-  text-align: left;
-  color: var(--color-adress);
-  background-color: var(--color-variable);
+  left: 0;
+  width: 100%;
+  height: 71%;
+  background-color: #2196f3;
   opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image-style-link:hover {
-  opacity: 1;
+.akapit-overlay-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-align: left;
+  padding: 49px 45px 49px 24px;
 }
-.portfolio-image:hover {
+.akapit-overlay-text p {
+  margin: 0;
+}
+.portfolio-list-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
+.portfolio-list-item:hover .akapit-overlay {
+  opacity: 0.9;
+  transform: translateY(0);
+}
+.portfolio-description {
+  overflow: hidden;
+}
 .portfolio-indention {
-  font-family: "Roboto";
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--color-title);
   text-align: start;
   padding-left: 24px;
+  margin: 0;
+  padding: 20px 24px 4px 24px;
 }
 
 .portfolio-indention-text {
+  line-height: 1.875em;
+  padding: 0px 24px 20px 24px;
   text-align: start;
-  padding-left: 24px;
   color: var(--color-text);
+  margin: 0;
 }
 
 .container {
