--- a/css/style.css
+++ b/css/style.css
@@ -244,12 +244,39 @@ ul {
 }
 
 .list-offer {
-  list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0;
 }
-
+.list-offer-item {
+  margin-left: 15px;
+  margin-right: 15px;
+  list-style: none;
+  position: relative;
+}
+.list-offer-item-description {
+  width: 370px;
+  height: 70px;
+  background-image: linear-gradient(
+    0deg,
+    rgba(47, 48, 58, 0.8) 0%,
+    rgba(47, 48, 58, 0.8) 100%
+  );
+  position: absolute;
+  bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 .offer {
   padding-top: 0;
   display: flex;
@@ -266,33 +293,6 @@ ul {
   color: var(--color-title);
   padding-bottom: 50px;
   margin: 0;
-}
-
-.overlay {
-  position: relative;
-}
-
-.overlay-text {
-  position: absolute;
-  width: 370px;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-  bottom: 4px;
-  margin: 0;
-  padding-top: 27px;
-}
-
-.font-overlay {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--color-slogan);
-  display: block;
-  justify-content: center;
-  align-items: center;
 }
 
 .team {
@@ -603,21 +603,24 @@ figure {
 .portfolio-list-item {
   position: relative;
   display: inline-block;
+  width: 370px;
+  height: 404px;
   margin-bottom: 30px;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
+  z-index: 1001;
+  overflow: hidden;
 }
 .akapit-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 71%;
+  height: 100%;
   background-color: #2196f3;
   opacity: 0;
   transform: translateY(100%);
-
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -642,7 +645,9 @@ figure {
   transform: translateY(0);
 }
 .portfolio-description {
-  overflow: hidden;
+  position: relative;
+  z-index: 1002;
+  background-color: #fff;
 }
 .portfolio-indention {
   font-size: 18px;
@@ -653,6 +658,7 @@ figure {
   padding-left: 24px;
   margin: 0;
   padding: 20px 24px 4px 24px;
+  margin-top: -9px;
 }
 
 .portfolio-indention-text {
@@ -668,4 +674,43 @@ figure {
   text-align: center;
   margin: 0 auto;
   padding: 0 15px;
+}
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.is-hidden {
+  opacity: 1;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 528px;
+  height: 581px;
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 4px;
+}
+
+.close-bth {
+  position: absolute;
+  background-color: #fff;
+  cursor: pointer;
+  top: 8px;
+  right: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.x {
+  width: 10px;
+  height: 10px;
 }
