--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,9 @@ figure {
   fill: var(--color-fill-social-link);
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-list-link:hover,
@@ -406,7 +408,9 @@ figure {
   border-radius: 4px;
   fill: var(--color-fill-social-link);
   margin-bottom: 94px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-caption-list-item-link:hover,
@@ -611,6 +615,7 @@ figure {
   border-right: 1px solid #eeeeee;
   z-index: 1001;
   overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .akapit-overlay {
   position: absolute;
@@ -621,8 +626,7 @@ figure {
   background-color: #2196f3;
   opacity: 0;
   transform: translateY(100%);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .akapit-overlay-text {
   font-weight: 400;
@@ -681,12 +685,15 @@ figure {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: transform, visibility, opacity;
 }
 .is-hidden {
-  opacity: 1;
+  opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transform: translate(50%, 50%);
 }
 .modal {
   position: absolute;
