--- a/css/style.css
+++ b/css/style.css
@@ -693,7 +693,6 @@ figure {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transform: translate(50%, 50%);
 }
 .modal {
   position: absolute;
@@ -706,6 +705,11 @@ figure {
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: transform;
+}
+.is-hidden .modal {
+  transform: translate(100%);
 }
 
 .close-bth {
